<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".RaiseQueryActivity">

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="27dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/user_pic1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/shivam" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_name"/>

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1">

            <TextView
                android:id="@+id/personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/full_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name_details"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personal_information"
                app:drawableEndCompat="@drawable/ic_username" />
            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_name_details"/>
            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator2"
                app:drawableEndCompat="@drawable/ic_password" />
            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"/>
            <TextView
                android:id="@+id/id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_card"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator3"
                app:drawableEndCompat="@drawable/ic_identity_card" />
            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_card"/>

            <TextView
                android:id="@+id/additional_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_details"
                android:layout_marginTop="70dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator4"/>
            <TextView
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                app:drawableEndCompat="@drawable/ic_contact_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additional_details"/>
            <View
                android:id="@+id/separator5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator5"
                app:drawableRightCompat="@drawable/ic_address" />
            <View
                android:id="@+id/separator6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address"/>
            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="16sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator6"
                app:drawableEndCompat="@drawable/ic_exit" />
            <View
                android:id="@+id/separator7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>