<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".RaiseQueryActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingTop="25dp"
            android:scrollbars="vertical">
            <TextView
                android:id="@+id/raise_query_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raise_query_heading"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/query_type_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="14dp"
                android:text="@string/query_type_heading"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/raise_query_heading" />

            <Spinner
                android:id="@+id/dropdown_query_types"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@layout/edittext_borders"
                android:hint="@string/query_type_hint"
                android:spinnerMode="dropdown"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/query_type_heading" />

            <TextView
                android:id="@+id/message_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/message_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dropdown_query_types" />

            <EditText
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="4dp"
                android:gravity="top"
                android:background="@layout/edittext_borders"
                android:hint="@string/message_hint"
                android:inputType="textPersonName"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_heading" />

            <TextView
                android:id="@+id/date_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/date_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_text" />

            <EditText
                android:id="@+id/date_value"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:padding="5dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="@color/grey"
                android:background="@layout/edittext_borders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_heading" />

            <TextView
                android:id="@+id/add_image_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_image_heading"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_value" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_image_heading"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <ImageView
                android:id="@+id/clicked_image"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/add_image_button" />

            <TextView
                android:id="@+id/number_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/vehicle_number_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clicked_image" />

            <EditText
                android:id="@+id/number_value"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:background="@layout/edittext_borders"
                android:enabled="true"
                android:backgroundTint="@color/grey"
                android:hint=""
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_heading" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"
                android:text="@string/query_send_button"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/number_value"
                app:layout_constraintTop_toBottomOf="@+id/number_value" />
            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:text="@string/query_reset_button"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/number_value"
                app:layout_constraintTop_toBottomOf="@+id/number_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>